# actix-api

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/messaging/: api.rs  consumer.rs  mod.rs  publisher.rs  service.rs  topic.rs
src/rest/: api.rs  routes.rs
