[package]
name = "actix-api"
version = "0.1.0"
authors = ["cpowicki <chpowicki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7.3"
anyhow = "1.0.34"
serde = "1.0.117"